test/success/effects/default_handler/main.sk
module Main {

pub effect Bar {
    fn bar() {
        println("Hello default");
    }
}

fn foo() {
    println("Hello from foo");
}

fn main() {
    with bar = foo {
        bar();
    }
    bar();
    foo();
}

}
