test/errors/effects/missing_handler/main.sk
module Main {

pub effect Bar {
    fn bar()
}

fn foo() {
    println("Hello from foo");
}

fn main() {
    with bar = foo {
        bar();
    }
    bar();
    foo();
}

}
